
v0.0.5

* [BGBUILD-55] Use euca2ools instead of ec2-ami-tools
* [BGBUILD-115] PackageHelper should take directory instead of file list to package

v0.0.4

* [BGBUILD-85] Adjust BoxGrinder spec files for review

v0.0.3

* [BGBUILD-66] Store tarred appliances files in s3-plugin/ dir for s3-plugin
* [BGBUILD-67] Add Fedora 14 support for S3 delivery plugin: AMI type
* [BGBUILD-63] Use 'aws' gem instead 'aws-s3' because it's already packaged in Fedora

v0.0.2

* Fixed issues with arch/base_arch

v0.0.1

* First release
